unpackaged/main/default/objects/metazoa_snapshot_history__c/metazoa_snapshot_history__c.object-meta.xml
<CustomObject>
	<label>metazoa_snapshot_history__c</label>
	<nameField>
		<label>Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>metazoa_snapshot_history__c</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>