unpackaged/main/default/objects/metazoa_snapshot_history__c/fields/metazoa_command_after__c.field-meta.xml
<CustomField>
	<fullName>metazoa_command_after__c</fullName>
	<label>Command After Results</label>
	<length>130000</length>
	<type>LongTextArea</type>
</CustomField>