unpackaged/main/default/objects/metazoa_snapshot_history__c/fields/metazoa_command_before__c.field-meta.xml
<CustomField>
	<fullName>metazoa_command_before__c</fullName>
	<label>Command Before Results</label>
	<length>130000</length>
	<type>LongTextArea</type>
</CustomField>