unpackaged/main/default/objects/metazoa_snapshot_history__c/fields/metazoa_complete_before__c.field-meta.xml
<CustomField>
	<fullName>metazoa_complete_before__c</fullName>
	<label>Complete Before Tasks</label>
	<length>30000</length>
	<type>LongTextArea</type>
</CustomField>