unpackaged/main/default/objects/metazoa_snapshot_history__c/fields/metazoa_deploy_record__c.field-meta.xml
<CustomField>
	<fullName>metazoa_deploy_record__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>Deployment Record</label>
	<referenceTo>metazoa_snapshot_push__c</referenceTo>
	<relationshipLabel>Snapshot Histories</relationshipLabel>
	<relationshipName>Snapshot_Histories</relationshipName>
	<type>Lookup</type>
</CustomField>