unpackaged/main/default/objects/metazoa_snapshot_history__c/fields/metazoa_incomplete_after__c.field-meta.xml
<CustomField>
	<fullName>metazoa_incomplete_after__c</fullName>
	<label>Incomplete After Tasks</label>
	<length>30000</length>
	<type>LongTextArea</type>
</CustomField>