unpackaged/main/default/objects/metazoa_snapshot_history__c/fields/metazoa_merged_stories__c.field-meta.xml
<CustomField>
	<fullName>metazoa_merged_stories__c</fullName>
	<label>Merged Story List</label>
	<length>30000</length>
	<type>LongTextArea</type>
</CustomField>