unpackaged/main/default/objects/metazoa_snapshot_history__c/fields/metazoa_snapshot_sprint__c.field-meta.xml
<CustomField>
	<fullName>metazoa_snapshot_sprint__c</fullName>
	<label>Snapshot Sprint</label>
	<referenceTo>metazoa_snapshot_sprint__c</referenceTo>
	<relationshipLabel>Snapshot Histories</relationshipLabel>
	<relationshipName>Snapshot_Histories</relationshipName>
	<relationshipOrder>0</relationshipOrder>
	<type>MasterDetail</type>
</CustomField>