unpackaged/main/default/objects/metazoa_snapshot_history__c/listViews/metazoa_All.listView-meta.xml
<ListView>
	<fullName>metazoa_All</fullName>
	<filterScope>Everything</filterScope>
	<label>All</label>
</ListView>